[package]
name = "snake"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Wieczorek"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
array2d = "0.3.0"
rand = "0.8.5"
indexmap = "1.9.2"
config-file = "0.2.3"
serde = "1.0.152"